--- a/gcc/config/s390/s390.md
+++ b/gcc/config/s390/s390.md
@@ -2027,10 +2027,10 @@
    (set_attr "length"  "8")])
 
 ;
-; cmpstrdi instruction pattern(s).
+; cmpmemdi instruction pattern(s).
 ;
 
-(define_expand "cmpstrdi"
+(define_expand "cmpmemdi"
    [(set (match_operand:DI 0 "register_operand" "")
          (compare:DI (match_operand:BLK 1 "s_operand" "")
                   (match_operand:BLK 2 "s_operand" "") ) )
@@ -2059,7 +2059,7 @@
       operands[1] = change_address (operands[1], VOIDmode, addr0);
       operands[2] = change_address (operands[2], VOIDmode, addr1);
 
-      emit_insn (gen_cmpstr_const (operands[1], operands[2], operands[3]));
+      emit_insn (gen_cmpmem_const (operands[1], operands[2], operands[3]));
       emit_insn (gen_cmpint_di (operands[0]));
       DONE;
     }
@@ -2081,17 +2081,17 @@
       emit_move_insn (gen_lowpart (DImode, reg1), len);
 
       /* Compare! */
-      emit_insn (gen_cmpstr_64 (reg0, reg1, reg0, reg1));
+      emit_insn (gen_cmpmem_64 (reg0, reg1, reg0, reg1));
       emit_insn (gen_cmpint_di (operands[0]));
       DONE;
     }
 }")
 
 ;
-; cmpstrsi instruction pattern(s).
+; cmpmemsi instruction pattern(s).
 ;
 
-(define_expand "cmpstrsi"
+(define_expand "cmpmemsi"
    [(set (match_operand:SI 0 "register_operand" "")
          (compare:SI (match_operand:BLK 1 "s_operand" "")
                   (match_operand:BLK 2 "s_operand" "") ) )
@@ -2120,7 +2120,7 @@
       operands[1] = change_address (operands[1], VOIDmode, addr0);
       operands[2] = change_address (operands[2], VOIDmode, addr1);
 
-      emit_insn (gen_cmpstr_const (operands[1], operands[2], operands[3]));
+      emit_insn (gen_cmpmem_const (operands[1], operands[2], operands[3]));
       emit_insn (gen_cmpint_si (operands[0]));
       DONE;
     }
@@ -2150,9 +2150,9 @@
 
       /* Compare! */
       if (TARGET_64BIT) 
-          emit_insn (gen_cmpstr_64 (reg0, reg1, reg0, reg1));
+          emit_insn (gen_cmpmem_64 (reg0, reg1, reg0, reg1));
       else
-          emit_insn (gen_cmpstr_31 (reg0, reg1, reg0, reg1));
+          emit_insn (gen_cmpmem_31 (reg0, reg1, reg0, reg1));
 
       emit_insn (gen_cmpint_si (operands[0]));
       DONE;
@@ -2161,7 +2161,7 @@
 
 ; Compare a block that is less than 256 bytes in length.
 
-(define_insn "cmpstr_const"
+(define_insn "cmpmem_const"
   [(set (reg:CCS 33)
         (compare:CCS (match_operand:BLK 0 "s_operand" "oQ")
                      (match_operand:BLK 1 "s_operand" "oQ")))
@@ -2174,7 +2174,7 @@
 
 ; Compare a block that is larger than 255 bytes in length.
 
-(define_insn "cmpstr_64"
+(define_insn "cmpmem_64"
   [(clobber (match_operand:TI 0 "register_operand" "=d"))
    (clobber (match_operand:TI 1 "register_operand" "=d"))
    (set (reg:CCS 33)
@@ -2186,7 +2186,7 @@
    (set_attr "atype"   "mem")
    (set_attr "type"    "vs")])
 
-(define_insn "cmpstr_31"
+(define_insn "cmpmem_31"
   [(clobber (match_operand:DI 0 "register_operand" "=d"))
    (clobber (match_operand:DI 1 "register_operand" "=d"))
    (set (reg:CCS 33)
