--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-11  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/20030711-1.c: New test.
+
 2003-06-26  Roger Sayle  <roger@eyesopen.com>
 	    Jakub Jelinek  <jakub@redhat.com>
 
