--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-05-29  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* config/s390/linux.h (MD_FALLBACK_FRAME_STATE_FOR): New.
+
 2003-07-11  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/rs6000/linux64.h (MD_FALLBACK_FRAME_STATE_FOR): Corrected
