--- a/libmudflap/ChangeLog
+++ b/libmudflap/ChangeLog
@@ -1,3 +1,9 @@
+2003-07-15  Diego Novillo  <dnovillo@redhat.com>
+
+	* testsuite/libmudflap.c/fail21-frag.c: Add volatile modifiers.
+	* testsuite/libmudflap.c/fail15-frag.c: Likewise.
+	* testsuite/libmudflap.c/fail13-frag.c: Likewise.
+
 2003-07-04  Frank Ch. Eigler  <fche@redhat.com>
 
 	* mf-hooks1.c, 2.c, 3.c: New file, splits up content from old ...
