--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,18 @@
+2002-09-10  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* config/s390/s390.h (MOVE_MAX): Define to correct value.
+	(MAX_MOVE_MAX): Define.
+	(MOVE_BY_PIECES_P): Define.
+	(CLEAR_BY_PIECES_P): Define.
+
+2002-07-12  Roger Sayle  <roger@eyesopen.com>
+
+	* expr.c [CLEAR_RATIO]: New macro defining the maximum number
+	of move instructions to use when clearing memory, c.f. MOVE_RATIO.
+	[CLEAR_BY_PIECES]: New macro, using CLEAR_RATIO, to determine
+	whether clear_by_pieces should be used to clear storage.
+	(clear_storage): Use CLEAR_BY_PIECES instead of MOVE_BY_PIECES.
+
 2002-05-29  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* config/s390/linux.h (MD_FALLBACK_FRAME_STATE_FOR): New.
