--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-05-21  Roger Sayle  <roger@eyesopen.com>
+
+	PR middle-end/6600
+	* expr.c (STORE_MAX_PIECES): New macro to avoid immediate constants
+	larger than INTEGER_CST.  (store_by_pieces_1): Use it here...
+	(can_store_by_pieces): ... and here to limit the largest mode used.
+	Add a comment to document this function.
+
 2002-09-10  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* config/s390/s390.h (MOVE_MAX): Define to correct value.
