--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,10 @@
 2003-07-15  Jakub Jelinek  <jakub@redhat.com>
 
+	* gcc.dg/cleanup-8.c: New test.
+	* gcc.dg/cleanup-9.c: New test.
+
+2003-07-15  Jakub Jelinek  <jakub@redhat.com>
+
 	* gcc.c-torture/execute/string-opt-8.c (main): Remove i370 and s390,
 	it does not have cmpstrsi patterns (just cmpmemsi).
 
