--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,10 @@
+2003-07-15  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/locale/ieee_1003.1-2001/c_locale.h (std::__convert_from_v):
+	New.
+	* include/bits/locale_facets.tcc (std::__convert_from_v): Remove
+	default argument.
+
 2003-05-07  Richard Henderson  <rth@redhat.com>
 
 	PR c++/10570
