--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-07  Roger Sayle  <roger@eyesopen.com>
+
+	PR optimization/11059
+	* g++.dg/opt/emptyunion.C: New testcase.
+
 2003-07-15  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/cleanup-8.c: New test.
