--- a/gcc/config/s390/s390.md
+++ b/gcc/config/s390/s390.md
@@ -1606,6 +1606,8 @@
 
   if (GET_CODE (operands[2]) == CONST_INT && INTVAL (operands[2]) <= 256)
     {
+      if (operands[2] == const0_rtx)
+	DONE;
       operands[0] = change_address (operands[0], VOIDmode, addr0);
       operands[1] = change_address (operands[1], VOIDmode, addr1);
       operands[2] = GEN_INT (INTVAL (operands[2]) - 1);
@@ -1685,6 +1687,8 @@
 
   if (GET_CODE (operands[2]) == CONST_INT && INTVAL (operands[2]) <= 256)
     {
+      if (operands[2] == const0_rtx)
+	DONE;
       operands[0] = change_address (operands[0], VOIDmode, addr0);
       operands[1] = change_address (operands[1], VOIDmode, addr1);
       operands[2] = GEN_INT (INTVAL (operands[2]) - 1);
@@ -1911,7 +1915,8 @@
 
    if (GET_CODE (operands[1]) == CONST_INT && INTVAL (operands[1]) < 256)
      {
-        emit_insn (gen_clrstrsico (operands[0], operands[1]));
+	if (operands[1] != const0_rtx)
+	  emit_insn (gen_clrstrsico (operands[0], operands[1]));
         DONE;
      }
    else
@@ -1954,7 +1959,8 @@
 
    if (GET_CODE (operands[1]) == CONST_INT && INTVAL (operands[1]) < 256)
      {
-        emit_insn (gen_clrstrsico (operands[0], operands[1]));
+	if (operands[1] != const0_rtx)
+	  emit_insn (gen_clrstrsico (operands[0], operands[1]));
         DONE;
      }
    else
