--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,81 @@
+2003-07-15  Mark Mitchell  <mark@codesourcery.com>
+
+	PR debug/11473
+	* g++.dg/debug/debug8.C: New test.
+
+2003-07-15  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.c-torture/execute/20030715-1.c: New test.
+
+2003-07-14  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/7053
+	* g++.dg/template/friend20.C: New test.
+
+2003-07-14  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
+
+	PR optimization/11440
+	* gcc.c-torture/execute/20030714-1.c: New test.
+
+2003-07-14  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	PR c++/11154
+	* g++.dg/template/partial2.C: New test.
+
+2003-07-13  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/11503
+	* g++.dg/template/anon1.C: New test.
+
+2003-07-13  Roger Sayle  <roger@eyesopen.com>
+
+	PR optimization/11059
+	* g++.dg/opt/emptyunion.C: New testcase.
+
+2003-07-11  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	Backport from mainline.
+
+	2003-05-21  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	PR c++/9738
+	* g++.dg/ext/dllimport2.C: New file.
+	* g++.dg/ext/dllimport3.C: New file.
+
+	2003-07-04  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	PR c++/5287, PR c++/7910,  PR c++/11021
+	* testsuite/g++.dg/ext/dllimport1.C: Add mingw32 as target. Add
+	tests for warnings.
+	* g++.dg/ext/dllimport2.C: Add tests for warnings.
+	* g++.dg/ext/dllimport3.C: Likewise.
+	* g++.dg/ext/dllimport4.C: New file.
+	* g++.dg/ext/dllimport5.C: New file.
+	* g++.dg/ext/dllimport6.C: New file.
+	* g++.dg/ext/dllimport7.C: New file.
+	* g++.dg/ext/dllimport8.C: New file.
+	* g++.dg/ext/dllimport9.C: New file.
+	* g++.dg/ext/dllimport10.C: New file.
+	* g++.dg/ext/dllexport1.C: New file.
+
+2003-07-11  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/8164
+	* g++.dg/template/nontype2.C: New test.
+
+	PR c++/10558
+	* g++.dg/parse/template8.C: New test.
+
+2003-07-10  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/10032
+	* g++.dg/warn/pedantic1.C: New test.
+
+2003-07-10  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	PR c++/10849
+	* g++.dg/template/access12.C: New test.
+
 2003-06-28  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/execute/builtins/string-8.c: New test.
