--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-14  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/cleanup-8.c: New test.
+	* gcc.dg/cleanup-9.c: New test.
+
 2003-07-15  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/execute/string-opt-8.c (main): Remove i370 and s390,
