--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-07-17  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/11087
+	* loop.c (basic_induction_var): Check if convert_modes emitted any
+	instructions. Remove them and return 0 if so.
+
 2003-07-15  Jakub Jelinek  <jakub@redhat.com>
 
 	* expr.c (emit_block_move): Don't move anything if size is const0_rtx.
