Avoid bootstrap failure.
From-SVN: r69653

--- a/gcc/config/s390/s390.md
+++ b/gcc/config/s390/s390.md
@@ -1439,16 +1439,14 @@
   "@
    ldr\\t%0,%1
    ld\\t%0,%1
-   ldy\\t%0,%1
    std\\t%1,%0
-   stdy\\t%1,%0
    lm\\t%0,%N0,%1
    stm\\t%1,%N1,%0
    #
    #
    mvc\\t%O0(8,%R0),%1"
-  [(set_attr "op_type" "RR,RX,RXY,RX,RXY,RS,RS,NN,NN,SS")
-   (set_attr "type" "floadd,floadd,floadd,fstored,fstored,lm,stm,*,*,cs")])
+  [(set_attr "op_type" "RR,RX,RX,RS,RS,NN,NN,SS")
+   (set_attr "atype"   "reg,mem,mem,mem,mem,*,*,mem")])
 
 (define_split
   [(set (match_operand:DF 0 "nonimmediate_operand" "")
