gimplify.c (gimple_boolify): New fn.
        * gimplify.c (gimple_boolify): New fn.
        (gimplify_expr) <TRUTH_NOT_EXPR>: Boolify arg.
        (gimplify_cond_expr): Boolify condition.
        (gimplify_boolean_expr): Boolify args.
        (gimple_push_cleanup): Make flag boolean.

        * tree-simple.c (is_gimple_relop): TRUTH_{AND,OR,XOR}_EXPR
        are not comparisons.
        (is_gimple_binary_expr): They are binary ops.

        * tree-mudflap.c (mf_build_check_statement_for): Use TRUTH_OR_EXPR
        rather than BIT_IOR_EXPR.

        * tree.h (boolean_type_node): Move from C/C++/Java frontends.
        (boolean_true_node, boolean_false_node): Likewise.
        (enum tree_index): Add TI_BOOLEAN_{TYPE,FALSE,TRUE}.
        * tree.c (build_common_tree_nodes): Init boolean_type_node.
        (build_common_tree_nodes_2): Init boolean_{true,false}_node.
        * stor-layout.c (set_sizetype): Handle an early BOOLEAN_TYPE.
        * c-common.h (truthvalue_type_node): Renamed from boolean_type_node.
        (truthvalue_true_node): Renamed from boolean_true_node.
        (truthvalue_false_node): Renamed from boolean_false_node.
        * c-decl.c: Just set truthvalue_* to integer_*.
        * c-*.[ch]: s/boolean/truthvalue/.  s/c_bool/boolean/.
        * cp/decl.c: Just set truthvalue_* to boolean_*.
        * java/java-tree.h: Move boolean_type_node et al to the back end.

From-SVN: r69762

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-24  Jason Merrill  <jason@redhat.com>
+
+	* decl.c: Just set truthvalue_* to boolean_*.
+
 2003-07-21  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* cp-tree.h (hack_identifier): Remove.
